// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component can be nested within Text and Heading 1`] = `
@media  {
  .c-cVWBGG {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-cVWBGG:focus,
  .c-cVWBGG:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-cVWBGG:active {
    color: var(--colors-primary1000);
  }

  .c-cVWBGG[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-ctivzP > .c-cVWBGG,
  .c-iUMJTc > .c-cVWBGG,
  .c-PJLV > .c-cVWBGG,
  .c-bYNGXt > .c-cVWBGG {
    font-size: 100%;
    line-height: 1;
  }

  .c-ctivzP > .c-cVWBGG::before,
  .c-ctivzP > .c-cVWBGG::after,
  .c-iUMJTc > .c-cVWBGG::before,
  .c-iUMJTc > .c-cVWBGG::after,
  .c-PJLV > .c-cVWBGG::before,
  .c-PJLV > .c-cVWBGG::after,
  .c-bYNGXt > .c-cVWBGG::before,
  .c-bYNGXt > .c-cVWBGG::after {
    content: none;
  }

  .c-ctivzP {
    margin: 0;
  }

  .c-ctivzP > .c-ctivzP:before,
  .c-ctivzP > .c-ctivzP:after {
    display: none;
  }

  .c-iUMJTc {
    font-weight: 700;
    margin: 0;
  }
}

@media  {
  .c-cVWBGG-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVWBGG-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVWBGG-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVWBGG-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-cVWBGG-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-cVWBGG-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }

  .c-cVWBGG-fmPQHp-noCapsize-true::before,
  .c-cVWBGG-fmPQHp-noCapsize-true::after {
    display: none !important;
  }

  .c-ctivzP-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-ctivzP-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-ctivzP-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-ctivzP-eMzMJc-weight-normal {
    font-weight: 400;
  }

  .c-ctivzP-cyRcZm-family-body {
    font-family: var(--fonts-body);
  }

  .c-iUMJTc-iEIMJs-size-md {
    font-family: var(--fonts-body);
    font-size: var(--fontSizes-xl);
    line-height: 1.14;
  }

  .c-iUMJTc-iEIMJs-size-md::before {
    content: '';
    margin-bottom: -0.2078em;
    display: table;
  }

  .c-iUMJTc-iEIMJs-size-md::after {
    content: '';
    margin-top: -0.2078em;
    display: table;
  }
}

<div>
  <p
    class="c-ctivzP c-ctivzP-gvmVBy-size-md c-ctivzP-eMzMJc-weight-normal c-ctivzP-cyRcZm-family-body"
  >
    <button
      class="c-cVWBGG c-cVWBGG-gvmVBy-size-md c-cVWBGG-fmPQHp-noCapsize-true"
    >
      TEXT LINK
    </button>
  </p>
  <h2
    class="c-iUMJTc c-iUMJTc-iEIMJs-size-md"
  >
    <button
      class="c-cVWBGG c-cVWBGG-gvmVBy-size-md c-cVWBGG-fmPQHp-noCapsize-true"
    >
      HEADING LINK
    </button>
  </h2>
</div>
`;

exports[`Link component renders an anchor 1`] = `
@media  {
  .c-cVWBGG {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-cVWBGG:focus,
  .c-cVWBGG:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-cVWBGG:active {
    color: var(--colors-primary1000);
  }

  .c-cVWBGG[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-ctivzP > .c-cVWBGG,
  .c-iUMJTc > .c-cVWBGG,
  .c-PJLV > .c-cVWBGG,
  .c-bYNGXt > .c-cVWBGG {
    font-size: 100%;
    line-height: 1;
  }

  .c-ctivzP > .c-cVWBGG::before,
  .c-ctivzP > .c-cVWBGG::after,
  .c-iUMJTc > .c-cVWBGG::before,
  .c-iUMJTc > .c-cVWBGG::after,
  .c-PJLV > .c-cVWBGG::before,
  .c-PJLV > .c-cVWBGG::after,
  .c-bYNGXt > .c-cVWBGG::before,
  .c-bYNGXt > .c-cVWBGG::after {
    content: none;
  }
}

@media  {
  .c-cVWBGG-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVWBGG-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVWBGG-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

<div>
  <a
    class="c-cVWBGG c-cVWBGG-gvmVBy-size-md"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
@media  {
  .c-cVWBGG {
    background: unset;
    border: unset;
    padding: unset;
    color: var(--colors-primary800);
    cursor: pointer;
    font-family: var(--fonts-body);
    text-decoration: none;
  }

  .c-cVWBGG:focus,
  .c-cVWBGG:hover {
    color: var(--colors-primary900);
    text-decoration: underline;
  }

  .c-cVWBGG:active {
    color: var(--colors-primary1000);
  }

  .c-cVWBGG[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
    pointer-events: none;
  }

  .c-ctivzP > .c-cVWBGG,
  .c-iUMJTc > .c-cVWBGG,
  .c-PJLV > .c-cVWBGG,
  .c-bYNGXt > .c-cVWBGG {
    font-size: 100%;
    line-height: 1;
  }

  .c-ctivzP > .c-cVWBGG::before,
  .c-ctivzP > .c-cVWBGG::after,
  .c-iUMJTc > .c-cVWBGG::before,
  .c-iUMJTc > .c-cVWBGG::after,
  .c-PJLV > .c-cVWBGG::before,
  .c-PJLV > .c-cVWBGG::after,
  .c-bYNGXt > .c-cVWBGG::before,
  .c-bYNGXt > .c-cVWBGG::after {
    content: none;
  }
}

@media  {
  .c-cVWBGG-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVWBGG-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVWBGG-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVWBGG-jvTRJO-size-lg {
    font-size: var(--fontSizes-lg);
    line-height: 1.52;
  }

  .c-cVWBGG-jvTRJO-size-lg::before {
    content: '';
    margin-bottom: -0.3983em;
    display: table;
  }

  .c-cVWBGG-jvTRJO-size-lg::after {
    content: '';
    margin-top: -0.3983em;
    display: table;
  }
}

<div>
  <a
    class="c-cVWBGG c-cVWBGG-jvTRJO-size-lg"
    href="https://google.com/"
    rel="noopener noreferrer"
    target="_blank"
  >
    GOOGLE
  </a>
</div>
`;
